tests/NormalTests/paczka1/fuzzy1/65693906.err
Error in line 14: J9QymO6 S908 6,0
Error in line 26: NYG S90 -2,6
Error in line 23: NYG S90 34,6
Error in line 29: NYG S908 84,4
Error in line 31: 8aUBEvfCg3o S908 30,6
